--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "type":"module",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
