--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
